--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "stripe": "^8.207.0",
+    "uuid": "^8.3.2",
+    "vuid": "^1.0.0"
   }
 }
